<resources>
    <string name="app_name">Covid-app</string>

    <!-- Main menu strings -->
    <string name="main_menu_title">Main menu</string>
    <string name="stay_home">Stay at home</string>
    <string name="text_main_menu">Ukraine is a country, situated in the centre of Europe. It has a long history, beautiful landscapes, interesting traditions and rich culture.</string>
    <string name="terms_conditions">Terms and conditions</string>


    <!-- Profile strings -->
    <string name="profile_toolbar_title">Profile</string>
    <string name="profile_score">Score</string>
    <string name="people_in_contact">People you contacted with:</string>
    <string name="profile_info">Info</string>
    <string name="profile_address">Address</string>
    <string name="profile_phone">Phone number</string>
    <string name="good_advice">
Wash your hands often, avoid touching your eyes, nose and mouth.

Wash your hands often (even several times per hour) using soap and warm water. If you do not have access to it, use alcohol-based disinfectant liquids / gels (min. 60%). Doing so  kills the virus on your hands, which may be contaminated by the virus through touching various surfaces. Touching eyes, nose or mouth with contaminated hands can transfer the virus from the surface.</string>
    <string name="normal_addvice">THE TEXT FOR ADVICE WHILE ILLNESS RATE UNDER 700 BUT MORE THAN 300 WILL BE HERE</string>
    <string name="bad_advice">THE TEXT FOR ADVICE WHILE ILLNESS RATE UNDER 200 WILL BE HERE</string>
    <string name="bottom_bar_profile">Profile</string>
    <string name="bottom_bar_QR">QR Code</string>
    <string name="qr_code_advice">You should show this QR Code to a guard in a shop nearby</string>


    <!-- Supermarkets strings -->
    <string name="supermarkets_toolbar_title">Supermarkets</string>


</resources>
