<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:gravity="center"
            android:text="Name Surname" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/profile_score" />

        <TextView
            android:id="@+id/profile_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:text="76 / 1000" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:src="@drawable/qr_code_sample"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/people_in_contact" />



        <!--        <LinearLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:orientation="vertical">-->

        <!--            <androidx.recyclerview.widget.RecyclerView-->
        <!--                android:id="@+id/contact_people_recycler_view"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent" />-->
        <!--        </LinearLayout>-->

        <!-- Hardcoded -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="Tom Roley, 845"/>


        <ImageButton
            android:id="@+id/add_contact_people"
            android:layout_marginTop="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/add_new_contact_people_background"
            android:src="@drawable/ic_add_black_24dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/profile_info" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/profile_address" />


        <TextView
            android:id="@+id/profile_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="Kurnatovskogo 24s" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/profile_phone" />


        <TextView
            android:id="@+id/profile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="+38057382948" />



    </LinearLayout>

</ScrollView>
